added search bar

--- a/index.html
+++ b/index.html
@@ -10,11 +10,21 @@
     <header class="nav-bar">
         <a href="#" class="glinks">Gmail</a>
         <a href="#" class="glinks">Images</a>
-        <a href="#"><img src=google_apps.png id="google_apps" alt="GoogleApps"></a>
+        <a href="#"><img src=google_apps.png id="google_apps" alt="Google Apps"></a>
         <a href="#" id="sign-in">Sign in</a>
     </header>
     <main>
+        <div>
+            <div class="main">
+                <img id="logo" src=google_logo.png alt="Google Logo" width="272" height="92">
+            </div>
+            <div class="search">
+                <img id="mag-glass" src=search_icon.png alt="Search icon">
+                <input class="search_bar" name="query" type="text">
+                <img id="speech-icon" src="speech_icon.png" alt="Speech Icon">
+            </div>
 
+        </div>
     </main>
     <footer>
 
