finished index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="nav-bar">
         <a href="#" class="glinks">Gmail</a>
         <a href="#" class="glinks">Images</a>
-        <a href="#"><img src=google_apps.png id="google_apps" alt="Google Apps"></a>
+        <a href="#"><img src=google_apps.png id="google_apps" alt="Google Apps" width="2%" height="2%"></a>
         <a href="#" id="sign-in">Sign in</a>
     </header>
     <main>
@@ -19,15 +19,34 @@
                 <img id="logo" src=google_logo.png alt="Google Logo" width="272" height="92">
             </div>
             <div class="search">
-                <img id="mag-glass" src=search_icon.png alt="Search icon">
+                <img id="mag-glass" src=search_icon.png alt="Search icon" width="1%" height="1%">
                 <input class="search_bar" name="query" type="text">
-                <img id="speech-icon" src="speech_icon.png" alt="Speech Icon">
+                <img id="speech-icon" src="speech_icon.png" alt="Speech Icon" width="1%" height="1%">
             </div>
-
+            <div class="buttons">
+                <button type="button" id="search_button">Google Search</button>
+                <button type="button" id="lucky">I'm Feeling Lucky</button>
+            </div>
         </div>
     </main>
     <footer>
-
+        <div class="footer">
+            <div class="footer_border">
+                <div class="foot">
+                    <div class="left_foot">
+                        <a href="#" class="glinks_left">Privacy</a>
+                        <a href="#" class="glinks_left">Terms</a>
+                        <a href="#" class="glinks_left">Settings</a>
+                    </div>
+                    <div class="right_foot">
+                        <a href="#" class="advert_link">Advertising</a>
+                        <a href="#" class="glinks_right">Business</a>
+                        <a href="#" class="glinks_right">About</a>
+                        <a href="#" class="glinks_right">How Search Works</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
