modified speech icon, final product

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="nav-bar">
         <a href="#" class="glinks">Gmail</a>
         <a href="#" class="glinks">Images</a>
-        <a href="#"><img src=google_apps.png id="google_apps" alt="Google Apps" width="2%" height="2%"></a>
+        <a href="#"><img src=google_apps.png id="google_apps" alt="Google Apps" width="30" height="30"></a>
         <a href="#" id="sign-in">Sign in</a>
     </header>
     <main>
@@ -19,9 +19,9 @@
                 <img id="logo" src=google_logo.png alt="Google Logo" width="272" height="92">
             </div>
             <div class="search">
-                <img id="mag-glass" src=search_icon.png alt="Search icon" width="1%" height="1%">
+                <img id="mag-glass" src=search_icon.png alt="Search icon">
                 <input class="search_bar" name="query" type="text">
-                <img id="speech-icon" src="speech_icon.png" alt="Speech Icon" width="1%" height="1%">
+                <img id="speech-icon" src="google_mic.png" alt="Speech Icon">
             </div>
             <div class="buttons">
                 <button type="button" id="search_button">Google Search</button>
