fixed header, working on logo

--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
 </head>
 <body>
     <header class="nav-bar">
-        <a href="#" class="glinks">Gmail</a>
-        <a href="#" class="glinks">Images</a>
-        <a href="#"><img src=google_apps.png id="google_apps" alt="Google Apps" width="30" height="30"></a>
-        <a href="#" id="sign-in">Sign in</a>
+        <div class="header-left">
+            <a href="#" class="glinks">About</a>
+            <a href="#" class="glinks">Store</a>
+        </div>
+        <div class="header-right">
+            <a href="#" class="glinks">Gmail</a>
+            <a href="#" class="glinks">Images</a>
+            <a href="#"><img src=google_apps.png id="google_apps" alt="Google Apps" width="30" height="30"></a>
+            <a href="#" id="sign-in">Sign in</a>
+        </div>
     </header>
     <main>
         <div>
