finally donegit add style.css

--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
                 <input class="search_bar" name="query" type="text">
                 <img id="speech-icon" src="google_mic.png" alt="Speech Icon">
             </div>
-            <div class="buttons">
-                <button type="button" id="search_button">Google Search</button>
-                <button type="button" id="lucky">I'm Feeling Lucky</button>
+            <div id="buttons">
+                <center>
+                    <input value="Google Search" type="button" id="searchbutton">
+                    <input value="I'm Feeling Lucky" type="button" id="searchbutton">
+                </center>
             </div>
         </div>
     </main>
@@ -39,16 +41,15 @@
         <div class="footer">
             <div class="footer_border">
                 <div class="foot">
-                    <div class="left_foot">
-                        <a href="#" class="glinks_left">Privacy</a>
-                        <a href="#" class="glinks_left">Terms</a>
-                        <a href="#" class="glinks_left">Settings</a>
-                    </div>
                     <div class="right_foot">
+                        <a href="#" class="glinks_right">Privacy</a>
+                        <a href="#" class="glinks_right">Terms</a>
+                        <a href="#" class="glinks_right">Settings</a>
+                    </div>
+                    <div class="left_foot">
                         <a href="#" class="advert_link">Advertising</a>
-                        <a href="#" class="glinks_right">Business</a>
-                        <a href="#" class="glinks_right">About</a>
-                        <a href="#" class="glinks_right">How Search Works</a>
+                        <a href="#" class="glinks_left">Business</a>
+                        <a href="#" class="glinks_left">How Search Works</a>
                     </div>
                 </div>
             </div>
